[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
[project]
dependencies=[
	"dtactions~=1.6.4.dev3"
	]
requires-python = ">=3.10"
name='vocola2'
authors=[{name="Rick Mohr",email="nowhere@mit.edu"}, {name = "Mark Lillibridge", email= "mdl@alum.mit.edu"}]
version="3.1.8.dev1"
description="Vocola is a voice command language for creating commands to control a computer by voice "

    classifiers=[
        "Development Status :: 4 - Beta",
        "Environment :: Win32 (MS Windows)",
        "Intended Audience :: Developers",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: Implementation :: CPython",
        "Topic :: Multimedia :: Sound/Audio :: Speech",
        "Topic :: Software Development :: Libraries :: Python Modules",
		"Topic :: Scientific/Engineering :: Human Machine Interfaces",
        ]

[project.urls]
homepage="http://vocola.net/v2/"
repository="https://github.com/dictation-toolbox/Vocola2"

keywords="dragon,speech,dictation,dictation-toolbox,unimacro,natlink"
[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
]
dev = [
    "pyenvutils","entry-point-inspector","build"
] 
 

		