[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"
[project]
dependencies=[
	"dtactions~=1.6.4.dev3",
  	"natlinkcore >= 5.4.1"
	]
requires-python = ">=3.10"
name='vocola2'
authors = [{name = "Mark Lillibridge", email = "mdl@alum.mit.edu"}]
version="3.1.10.dev3"
description="Vocola is a voice command language for creating commands to control a computer by voice "
keywords=["dragon","speech","dictation","dictation-toolbox","natlink", "dtactions"]
readme = "readme.md"

classifiers=[
	"Development Status :: 4 - Beta",
	"Environment :: Win32 (MS Windows)",
	"Intended Audience :: Developers",
	"Operating System :: Microsoft :: Windows",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: Implementation :: CPython",
	"Topic :: Multimedia :: Sound/Audio :: Speech",
	"Topic :: Software Development :: Libraries :: Python Modules",
	"Topic :: Scientific/Engineering :: Human Machine Interfaces",
	]

[project.urls]
homepage="http://vocola.net/v2/"
repository="https://github.com/dictation-toolbox/Vocola2"
source="https://github.com/dictation-toolbox/vocola2"	

[project.optional-dependencies]
test = [
    "pytest >=7.1.2",
]
dev = [
    "pyenvutils","entry-point-inspector","build"
] 
 

 
